# cryptography-with-rust

./: .gitignore  Cargo.toml  readme.md
hash-functions/: Cargo.toml  exercises.md
hash-functions/src/: main.rs
hash-functions/src/algorithms/: mod.rs  sha2_algo.rs  sha3_algo.rs
identity/: .env  Cargo.toml  exercises.md
identity/files/: key.pem
identity/src/: lib.rs
identity/src/elements/: argon_algorithm.rs  mod.rs  private_identity.rs  public_identity.rs  version.rs
identity/src/utils/: environment.rs  error.rs  hasher.rs  mod.rs
identity/tests/: private_identity_test.rs  public_identity_test.rs
password-hashing/: .env  Cargo.toml  exercises.md
password-hashing/src/: argon_fn.rs  lib.rs  main.rs  templates.rs
