[package]
name = "identity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
sha2 = "0.10.8"
argon2 = "0.5.3"
anyhow = "1.0.80"
hex = "0.4.3"
base64-url = "2.0.2"
ed25519-dalek = { version = "2.1.1", features = ["rand_core", "pkcs8", "pem"] }
base64ct = { version = "1.6.0", features = ["alloc", ]}
thiserror = "1.0.58"

# Use at some point